1.部分问题修复